force-app/main/default/objects/Loopio__Loopio_Project__c/Loopio__Loopio_Project__c.object-meta.xml
<CustomObject>
    <description>This object represents a Loopio project.  These are intended to be created only by the Loopio integration, and all default fields will be managed by Loopio.</description>
    <label>Loopio (Opportunity)</label>
    <nameField>
        <label>Loopio Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loopio (Opportunities)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>