force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Description__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>