force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Loopio_Project_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Loopio_Project_Detail__c</fullName>
    <formula>HYPERLINK(&apos;/apex/Loopio__Loopio_Project_Detail?Id=&apos; &amp; Id, &apos;View Project&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loopio Project Detail</label>
    <type>Text</type>
</CustomField>