force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Number_of_Complete_Questions__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Number_of_Complete_Questions__c</fullName>
    <inlineHelpText>Total number of questions marked as complete</inlineHelpText>
    <label>Completed Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>