force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Loopio_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>