force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Percent_Complete_Questions__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Percent_Complete_Questions__c</fullName>
    <formula>IF(
   OR(
       ISNULL(Loopio__Total_Number_of_Questions__c),
       Loopio__Total_Number_of_Questions__c = 0
   ),
   0,
   BLANKVALUE(Loopio__Number_of_Complete_Questions__c, 0) / Loopio__Total_Number_of_Questions__c
)</formula>
    <inlineHelpText>Percentage of Total Questions that are marked as complete</inlineHelpText>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>