force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Project_Type__c</fullName>
    <description>Loopio Project Type</description>
    <label>Project Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>