force-app/main/default/objects/Loopio__Loopio_Project__c/fields/Loopio__Status__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>